Coded script.js file as per assigment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-lesson06-challenge02-budgetvacay-starter",
+  "name": "js-lesson06-challenge02",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
